# CzarnyJacek

./: .gitignore  CMakeLists.txt  README.md  SetCommonConfig.cmake  Sprawozdanie Podsumowywujące Projektu Czarny Jacek.docx  main.cpp
Documents/: Podsumowanie_projektu.xlsx  Raport_wykonawcy_projektu_Mikolaj_Wandzel.docx  Work_Rules.txt  Zasady_gry.txt  raport_wykonawczy_projektu_TW.docx
Documents/Meetings/: NPG_30_04.docx  Spotkanie podsumowujące sprint 1.docx  Spotkanie podsumowujące sprint 2.docx  Spotkanie podsumowujące sprint 3.docx  Spotkanie podsumowujące sprint 4.docx  Spotkanie_organizacyjne_2docx.docx
Documents/Scrum Master Reports/: Raport Scrum Mastera S1.docx  Raport Scrum Mastera S2.docx  Raport Scrum Mastera S3.docx  Raport Scrum Mastera S4.docx  Raport Scrum Mastera S5.docx
graphic_concept/: Inplementacja  Instruction_OpenCV.txt  concepts  gui.xcf  menu_glowne.xcf  podmenu.xcf
include/game/: gameClasses.hpp
include/gui/: commandLineInterface.hpp
src/game/: gameClasses.cpp
src/gui/: commandLineInterface.cpp
test/: test_classes.cpp  test_gui.cpp  test_rules.cpp
